Play playlist inside image thumbs

--- a/view/css/main.css
+++ b/view/css/main.css
@@ -1234,3 +1234,10 @@ a:hover{
     display: flex;
     margin: 4px 0;
 }
+.avideoIframeIntoElement{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
