--- a/view/css/custom/cyborg.css
+++ b/view/css/custom/cyborg.css
@@ -56,6 +56,7 @@ th:hover, .select2-dropdown{
 }
 
 .gallery .title, .videosDetails .title {
-    max-height: 40px;
-    min-height: 40px;
+    max-height: 40px !important;
+    min-height: 40px !important;
+    padding: 0 !important;
 }
