hamburger color fix

--- a/view/css/custom/netflix.css
+++ b/view/css/custom/netflix.css
@@ -49,3 +49,6 @@ th:hover, .select2-dropdown{
 .btn-default.no-outline:hover{
     color: #AAA !important;
 }
+.hamburger *{
+    stop-color: #FFF;
+}
