--- a/view/css/custom/slate.css
+++ b/view/css/custom/slate.css
@@ -32,3 +32,8 @@
     background-color: #333;
 }
 ::-webkit-scrollbar-track, ::-webkit-scrollbar-thumb{-webkit-box-shadow: inset 0 0 6px rgba(255,255,255,255.3) !important;}
+
+
+.hamburger svg *{
+    stroke: #FFF;
+}
