--- a/view/css/custom/superhero.css
+++ b/view/css/custom/superhero.css
@@ -26,3 +26,7 @@ body {
     color: #ccc;
 }
 ::-webkit-scrollbar-track, ::-webkit-scrollbar-thumb{-webkit-box-shadow: inset 0 0 6px rgba(255,255,255,255.3) !important;}
+
+.hamburger svg *{
+    stroke: #FFF;
+}
