--- a/view/css/custom/cosmo.css
+++ b/view/css/custom/cosmo.css
@@ -17,3 +17,8 @@
 .hamburger svg *{
     stroke: #FFF;
 }
+span.selection > span.select2-selection--single{
+    color: #ffffff;
+    background-color: #222222;
+    border-color: #222222;
+}
