--- a/view/css/custom/darkly.css
+++ b/view/css/custom/darkly.css
@@ -64,3 +64,9 @@ th:hover, .select2-dropdown{
 .hamburger svg *{
     stroke: #FFF;
 }
+span.selection > span.select2-selection--single{
+    color: #ffffff;
+    background-color: #464545;
+    border-color: #464545;
+    border: none;
+}
