--- a/view/css/custom/flatly.css
+++ b/view/css/custom/flatly.css
@@ -23,3 +23,8 @@ body {
 .hamburger svg *{
     stroke: #FFF;
 }
+span.selection > span.select2-selection--single{
+    color: #ffffff;
+    background-color: #95a5a6;
+    border-color: #95a5a6;
+}
