--- a/view/css/custom/netflix.css
+++ b/view/css/custom/netflix.css
@@ -52,3 +52,15 @@ th:hover, .select2-dropdown{
 .hamburger svg *{
     stroke: #FFF;
 }
+span.selection > span.select2-selection--single{
+    background-image: -webkit-linear-gradient(#101010, #141414 60%, #090909);
+    background-image: -o-linear-gradient(#101010, #141414 60%, #090909);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#101010), color-stop(60%, #141414), to(#090909));
+    background-image: linear-gradient(#101010, #141414 60%, #090909);
+    background-repeat: no-repeat;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff484e55', endColorstr='#ff313539', GradientType=0);
+    -webkit-filter: none;
+    filter: none;
+    border-color: transparent;
+    border: none;
+}
