--- a/view/css/custom/readable.css
+++ b/view/css/custom/readable.css
@@ -31,3 +31,13 @@
     height: 40px !important;
     max-width: 40px !important;
 }
+span.selection > span.select2-selection--single{
+    color: #333333;
+    background-color: #ffffff;
+    border-color: #dddddd;
+    border-top-color: rgb(221, 221, 221);
+    border-right-color: rgb(221, 221, 221);
+    border-bottom-color: rgb(221, 221, 221);
+    border-left-color: rgb(221, 221, 221);
+    border: none;
+}
