--- a/view/css/custom/readable.css
+++ b/view/css/custom/readable.css
@@ -41,3 +41,7 @@ span.selection > span.select2-selection--single{
     border-left-color: rgb(221, 221, 221);
     border: none;
 }
+a{
+    font-family: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #000;
+}
