https://github.com/WWBN/AVideo/issues/6777

--- a/view/css/main.css
+++ b/view/css/main.css
@@ -1452,3 +1452,28 @@ button.btn-sm.hamburger svg{
   justify-content: center;
   align-items: center;
 }
+
+.loading-background {
+  --border-width: 3px;
+  border-radius: var(--border-width);
+}
+.loading-background::after {
+  position: absolute;
+  content: "";
+  top: calc(-1 * var(--border-width));
+  left: calc(-1 * var(--border-width));
+  z-index: -1;
+  width: calc(100% + var(--border-width) * 2);
+  height: calc(100% + var(--border-width) * 2);
+  background: linear-gradient(60deg, #555, #777, #999, #AAA, #BBB, #CCC, #DDD, #FFF);
+  background-size: 300% 300%;
+  background-position: 0 50%;
+  border-radius: calc(2 * var(--border-width));
+  animation: moveGradient 4s ease-in-out infinite;
+}
+
+@keyframes moveGradient {
+  50% {
+    background-position: 100% 50%;
+  }
+}
