--- a/view/videosListItem.html
+++ b/view/videosListItem.html
@@ -1,16 +1,10 @@
 <div class="col-lg-12 col-sm-12 col-xs-12 bottom-border videoListItem" id="{divID}" style='{style}' >
-    <div class="col-lg-5 col-sm-5 col-xs-5 nopadding thumbsImage videoLink h6" >
+    <div class="col-lg-5 col-sm-5 col-xs-5 nopadding videoLink h6" >
         <div class="galleryVideo">
             <a href="{link}" title="{title}">
-                <img src="{imgJPGLow}" data-src="{imgJPGHight}" alt="{title}" class="thumbsJPG img-responsive text-center rotate" height="130" />
-                {imgGifHTML}
+                {thumbsImage}
             </a>
-            {timeHTML}
             {loggedUserHTML}
-        </div>
-        <div class="progress" style="height: 3px; margin-bottom: 2px;">
-            <div class="progress-bar progress-bar-danger" role="progressbar" 
-                 style="width: {progress}%;" aria-valuenow="{progress}" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
     <div class="col-lg-7 col-sm-7 col-xs-7 videosDetails">
