--- a/view/css/main.css
+++ b/view/css/main.css
@@ -32,14 +32,15 @@ time.duration{
 */
 time.duration {
     position: absolute;
-    background: rgba(0, 0, 0, 0.4)!important;
+    background: rgba(0, 0, 0, 0.6)!important;
     padding: 1px 4px;
     color: #FFF;
     top: 5px;
     left: 5px;
     font-size: 12px;
     border-radius: 5px;
-    opacity: 0.7;
+    opacity: 0.8;
+    text-shadow: 1px 1px 4px #000;
 }
 .thumbsImageContainer{
     position: relative;
