--- a/view/css/main.css
+++ b/view/css/main.css
@@ -1048,7 +1048,8 @@ li.dropdown-submenu > ul > li > a{
 .swal-modal.swal-modal-iframe-xsmall .swal-content,
 .swal-modal.swal-modal-iframe-small .swal-content,
 .swal-modal.swal-modal-iframe-large .swal-content,
-.swal-modal.swal-modal-iframe-full .swal-content{
+.swal-modal.swal-modal-iframe-full .swal-content,
+.swal-modal.swal-modal-iframe-full-transparent .swal-content{
     width: 100%;
     height: 100%;
 }
@@ -1056,7 +1057,8 @@ li.dropdown-submenu > ul > li > a{
 .swal-modal.swal-modal-iframe-xsmall iframe,
 .swal-modal.swal-modal-iframe-small iframe,
 .swal-modal.swal-modal-iframe-large iframe,
-.swal-modal.swal-modal-iframe-full iframe{
+.swal-modal.swal-modal-iframe-full iframe,
+.swal-modal.swal-modal-iframe-full-transparent iframe{
     width: 100%;
     height: calc(100% - 50px);
 }
@@ -1086,7 +1088,8 @@ li.dropdown-submenu > ul > li > a{
     max-width: 100%;
     max-height: 100%;
 }
-.swal-modal-iframe-full {
+.swal-modal-iframe-full,
+.swal-modal-iframe-full-transparent {
     margin: 0;
     position: fixed;
     top: 0;
@@ -1096,17 +1099,26 @@ li.dropdown-submenu > ul > li > a{
     max-width: 100%;
     max-height: 100%;
 }
-.swal-modal.swal-modal-iframe-full iframe{
+.swal-modal.swal-modal-iframe-full iframe,
+.swal-modal.swal-modal-iframe-full-transparent iframe{
     height: 100%;
 }
 
-.swal-modal-iframe-full #avideoModalIframeDiv{
+.swal-modal-iframe-full-transparent iframe, 
+.swal-modal-iframe-full-transparent .swal-content,
+.swal-modal-iframe-full-transparent{
+    background-color: transparent;
+}
+
+.swal-modal-iframe-full #avideoModalIframeDiv,
+.swal-modal-iframe-full-transparent #avideoModalIframeDiv{
     display: block;
     margin: 0;
 }
 
 .swal-modal.swal-modal-iframe-large .swal-content,
-.swal-modal.swal-modal-iframe-full .swal-content{
+.swal-modal.swal-modal-iframe-full .swal-content,
+.swal-modal-iframe-full-transparent .swal-content{
     padding: 0;
     margin: 0;
 }
