--- a/view/css/main.css
+++ b/view/css/main.css
@@ -1011,6 +1011,10 @@ li.dropdown-submenu > ul > li > a{
     }
 }
 
+.glowText{
+    animation: socketGlow 1s infinite alternate;
+}
+
 .glowBox{
     animation: glowBox 1s infinite alternate;
 }
