--- a/plugin/Live/view/getActiveLivesRestreams.template.html
+++ b/plugin/Live/view/getActiveLivesRestreams.template.html
@@ -2,10 +2,10 @@
      live_restreams_logs_id="{log_id}"
      restreams_id="{id}"
      live_transmitions_history_id="{live_transmitions_history_id}">
-    <button class="btn btn-default btn-block hideWhenInactive hideWhenActive hideWhenLoading hideWhenHasLog">
-        <i class="fas fa-ban"></i> Error on start it<br><small>{name}</small>
+    <button class="btn btn-default btn-block hideWhenInactive hideWhenActive hideWhenLoading hideWhenHasLog" onclick="getAction('start', {live_transmitions_history_id}, {id});">
+        <i class="fas fa-play"></i> Start<br><small>{name}</small><br><small>{name}</small>
     </button>
-    <button class="btn btn-primary btn-block hideWhenInactive hideWhenActive hideWhenHasNoLog">
+    <button class="btn btn-primary btn-block hideWhenInactive hideWhenActive hideWhenHasNoLog disabled">
         <i class="fas fa-sync faa-spin animated"></i> Loading<br><small>{name}</small>
     </button>
     <button class="btn btn-danger btn-block hideWhenInactive hideWhenLoading hideWhenHasNoLog" onclick="getAction('stop', {live_transmitions_history_id}, {id});">
