--- a/plugin/Live/view/getActiveLivesRestreams.template.html
+++ b/plugin/Live/view/getActiveLivesRestreams.template.html
@@ -3,7 +3,7 @@
      restreams_id="{id}"
      live_transmitions_history_id="{live_transmitions_history_id}">
     <button class="btn btn-default btn-block hideWhenInactive hideWhenActive hideWhenLoading hideWhenHasLog" onclick="getAction('start', {live_transmitions_history_id}, {id});">
-        <i class="fas fa-play"></i> Start<br><small>{name}</small><br><small>{name}</small>
+        <i class="fas fa-play"></i> Start<br><small>{name}</small>
     </button>
     <button class="btn btn-primary btn-block hideWhenInactive hideWhenActive hideWhenHasNoLog disabled">
         <i class="fas fa-sync faa-spin animated"></i> Loading<br><small>{name}</small>
