--- a/plugin/Live/view/getActiveLivesRestreams.template.html
+++ b/plugin/Live/view/getActiveLivesRestreams.template.html
@@ -3,15 +3,15 @@
      restreams_id="{id}"
      live_transmitions_history_id="{live_transmitions_history_id}">
     <button class="btn btn-default btn-block hideWhenInactive hideWhenActive hideWhenLoading hideWhenHasLog" onclick="getAction('start', {live_transmitions_history_id}, {id});">
-        <i class="fas fa-play"></i> Start<br><small>{name}</small>
+        <i class="fas fa-play"></i> Start<br><small>{display_name}</small>
     </button>
     <button class="btn btn-primary btn-block hideWhenInactive hideWhenActive hideWhenHasNoLog disabled">
-        <i class="fas fa-sync faa-spin animated"></i> Loading<br><small>{name}</small>
+        <i class="fas fa-sync faa-spin animated"></i> Loading<br><small>{display_name}</small>
     </button>
     <button class="btn btn-danger btn-block hideWhenInactive hideWhenLoading hideWhenHasNoLog" onclick="getAction('stop', {live_transmitions_history_id}, {id});">
-        <i class="fas fa-stop"></i> Stop<br><small>{name}</small>
+        <i class="fas fa-stop"></i> Stop<br><small>{display_name}</small>
     </button>
     <button class="btn btn-success btn-block hideWhenActive hideWhenLoading hideWhenHasNoLog" onclick="getAction('start', {live_transmitions_history_id}, {id});">
-        <i class="fas fa-play"></i> Start<br><small>{name}</small>
+        <i class="fas fa-play"></i> Start<br><small>{display_name}</small>
     </button>
 </div>
