--- a/view/css/main.css
+++ b/view/css/main.css
@@ -951,6 +951,31 @@ li.dropdown-submenu > ul > li > a{
     width: 100%;
 }
 
+.dropdown-menu.dropdown-menu-arrow:before {
+  position: absolute;
+  top: -7px;
+  right: 20px;
+  display: inline-block;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #ccc;
+  border-left: 7px solid transparent;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
+  content: '';
+}
+
+.dropdown-menu.dropdown-menu-arrow:after {
+  position: absolute;
+  top: -6px;
+  right: 20px;
+  display: inline-block;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #ffffff;
+  border-left: 6px solid transparent;
+  content: '';
+}
+#topMenuUserNotifications > ul > div.list-group{
+    overflow-x: hidden;
+}
 
 .socket_not_loading{
     display: none;
