--- a/plugin/Gallery/style.css
+++ b/plugin/Gallery/style.css
@@ -170,7 +170,9 @@ a.h6{
     display: inline-block;
     width: 100%;
 }
-
+.galleryVideo {
+    margin-bottom: 3em;
+}
 
 .gallerySerieOverlay{
     position: absolute; 
