Gallery container is now fluid there is an option to disable on the Gallery plugin

--- a/view/css/main.css
+++ b/view/css/main.css
@@ -1640,3 +1640,6 @@ button.btn-sm.hamburger svg{
     text-align: center;
     padding: 5px;
 }
+.mainArea .galleryVideo {
+    margin-bottom: 3em;
+}
