--- a/view/videosListItem.html
+++ b/view/videosListItem.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12 col-sm-12 col-xs-12 bottom-border videoListItem" id="{divID}" style='{style}' >
+<div class="col-lg-12 col-sm-12 col-xs-12 bottom-border videoListItem videoListItem-html" id="{divID}" style='{style}' >
     <div class="col-lg-5 col-sm-5 col-xs-5 nopadding videoLink h6" >
         <div class="galleryVideo">
             <a href="{link}" title="{title}">
