--- a/plugin/Live/view/extraitems_templates/videoListItem.html
+++ b/plugin/Live/view/extraitems_templates/videoListItem.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12 col-sm-12 col-xs-12 bottom-border videoListItem  _unique_id_ _class_" id="videoList_unique_id_" >
+<div class="col-lg-12 col-sm-12 col-xs-12 bottom-border videoListItem videoListItem-Template  _unique_id_ _class_" id="videoList_unique_id_" >
     <div class="col-lg-5 col-sm-5 col-xs-5 nopadding thumbsImage videoLink h6">
         <div style="position: relative;" class="galleryVideo liveVideo">
             <a href="_link_">
