--- a/view/videoCreator.html
+++ b/view/videoCreator.html
@@ -1,14 +1,14 @@
 <div class="videoCreator clearfix">
     <a href='{channelLink}' class="pull-left">
         <img src="{photo}" alt="{name} Photo"
-             class="img img-responsive img-circle zoom" />
+             class="img img-responsive img-rounded" style="width:80px;" />
     </a>
     <div class="pull-left">
-        <a href='{channelLink}' class='btn btn-xs btn-default'>
+        {subscriptionButton}<br>
+        <a href='{channelLink}' class="btn btn-link">
             {name}
-            {icon}
+            {icon}            
         </a>
-        {subscriptionButton}
     </div>
 </div>
 {html}
