--- a/view/videoCreatorSmall.html
+++ b/view/videoCreatorSmall.html
@@ -1,7 +1,7 @@
 <div class="videoCreatorSmall">
     <a href="{channelLink}">
         <img src="{photo}" alt="{name} Photo"
-             class="img img-responsive img-circle zoom"/>
+             class="img img-responsive img-rounded"  style="width:40px;"/>
         {name}
         {icon}
     </a>
