https://github.com/WWBN/AVideo/issues/7833

--- a/view/css/main.css
+++ b/view/css/main.css
@@ -1851,3 +1851,30 @@ button.btn-sm.hamburger svg {
 .labelUpperCase {
 	text-transform: uppercase;
 }
+
+.live-icon::before{
+	content: "\1f534"; /* insert the high voltage sign */
+	animation: glow 1s ease-in-out infinite alternate, flash 1s infinite; /* animate the glow and flash */
+  
+}
+
+  @keyframes glow {
+	from {
+	  text-shadow: 0 0 10px rgba(255, 0, 0, 0.096);
+	}
+	to {
+	  text-shadow: 0 0 20px #f00;
+	}
+  }
+  
+  @keyframes flash {
+	0% {
+	  opacity: 1;
+	}
+	50% {
+	  opacity: 0;
+	}
+	100% {
+	  opacity: 1;
+	}
+  }
