--- a/plugin/Gallery/style.css
+++ b/plugin/Gallery/style.css
@@ -49,6 +49,15 @@ h3.galleryTitle{
     margin-right: auto;
 }
 
+.aspectRatio16_9 .thumbsImage img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
 .thumbsGIF{
     text-indent:-9999px;
     width: 100%;
