https://github.com/WWBN/AVideo/issues/7846#issuecomment-1491856410

--- a/view/css/main.css
+++ b/view/css/main.css
@@ -53,6 +53,12 @@ time.duration {
 
 .thumbsImageContainer .thumbsImage {
 	border: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 4px solid transparent;
 }
 
 .thumbsImageContainer .progress {
